--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 	        <artifactId>cxf-rt-transports-http</artifactId>
 	        <version>4.0.4</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20210307</version>
+		</dependency>
 	</dependencies>
 
 	<build>
